# gemini-cli-headless

./: .gitignore  EXAMPLES.md  GEMINI.md  INTEGRITY.md  README.md  agent_loop.py  fetch_issues.py  gemini_cli_headless.py  implementation_run.py  parent_secret.txt  parent_secret_a6ba2d7d.txt  pyproject.toml
docs/: 01_architecture_overview.md  01_examples_and_usage.md  02_prompt_composition_and_soft_interception.md  02_the_tier_system.md  03_architecture_overview.md  03_path_security_and_anchoring.md  04_path_security_and_anchoring.md  04_soft_interception_model_psychology.md  05_the_tier_system.md  05_trace_auditing_and_testing.md  06_architecture_overview.md  06_examples_and_usage.md  07_trace_auditing_and_testing.md  07_version_lock_and_stability.md  08_cross_platform_architecture.md  09_version_lock_and_stability.md  vision_scenarios.md
docs/architecture/: artifact_driven_flow.md  prompting_architecture.md  specialized_qa_skills.md
docs/usage/: manager_toolbox.md
schemas/: irp_schema.json  qrp_schema.json
temp_workspace_01_hello_world/: .doer_session.json  .qa_session.json  IRP_v1.md  IRQ.md  QRP_v1.md  run_state.json
templates/artifacts/: irq_template.md
templates/roles/: doer_prompt.md
test_integrity_sandbox/ok/: allowed.txt
test_integrity_sandbox_a6ba2d7d/: secret.txt  test.txt
tests/: conftest.py  repro_audio_bug.py  run_e2e_tests.py  run_integrity.py  run_simulations.py  run_wsl_tests.py  test_auth_mode.py  test_isolation.py  test_pollution_isolation.py  test_quota_greedy_fix.py  test_sec_tools_basic.py  test_system_instruction.py
tools/: manager_tools.py  validate_artifact.py
(+29 files in other folders)
