[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gemini-cli-headless"
version = "0.1.0"
description = "A zero-dependency Python wrapper for the official Google Gemini Node.js CLI."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name="jarek108" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools]
py-modules = ["gemini_cli_headless"]