[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gemini-cli-headless"
version = "1.0.1"
description = "A resilient, zero-dependency Python wrapper for the official Google Gemini Node.js CLI."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name="jarek108" }
]
keywords = ["gemini", "google-ai", "cli", "headless", "wrapper", "llm"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "Development Status :: 5 - Production/Stable",
]

[project.urls]
Homepage = "https://github.com/jarek108/gemini-cli-headless"
Repository = "https://github.com/jarek108/gemini-cli-headless"
Issues = "https://github.com/jarek108/gemini-cli-headless/issues"

[tool.setuptools]
py-modules = ["gemini_cli_headless"]
